fixed some spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@
 }
 body {
   margin: 0;
-  padding: 0 30px;
 }
 .wrapper {
   display: flex;
@@ -29,12 +28,13 @@ body {
   align-items: center;
   min-height: 100vh;
   gap: 30px;
+  padding: 30px;
+  box-sizing: border-box;
 }
 .site-header {
   width: 100%;
   max-width: 700px;
   box-sizing: border-box;
-  padding: 30px 0;
   display: flex;
   flex-direction: column;
   align-items: start;
